--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ theme: just-the-docs
 
 url: https://harikiranvusirikala.github.io/aws-certified-ai-practitioner
 
-logo: "assets/imges/icon.png"
+logo: "assets/images/icon.png"
 
 defaults:
   - scope:
@@ -15,11 +15,11 @@ defaults:
       layout: "default"
 
 # Build settings
-aux_links: # remove if you don't want this link to appear on your pages
-  Repository: https://github.com/harikiranvusirikala/aws-certified-ai-practitioner
-aux_links_new_tab: true
+# aux_links: # remove if you don't want this link to appear on your pages
+#   Repository: https://github.com/harikiranvusirikala/aws-certified-ai-practitioner
+# aux_links_new_tab: true
 heading_anchors: true
-footer_content: 'Contact us over email at <a href="mailto:vusirikalaharikiran@gmail.com">vusirikalaharikiran@gmail.com</a>'
+footer_content: 'Contact over LinkedIn at <a href="https://linkedin.com/in/hari-kiran-vusirikala/">Hari Kiran Vusirikala</a>'
 
 # Back to top link
 back_to_top: true
