--- a/_config.yml
+++ b/_config.yml
@@ -34,3 +34,8 @@ callouts:
   note:
     title: Note
     color: purple
+
+# Google Analytics Tracking (optional)
+# Supports a CSV of tracking ID strings (eg. "UA-1234567-89,G-1AB234CDE5")
+ga_tracking: G-F3R5F3MBEK
+ga_tracking_anonymize_ip: true # Use GDPR compliant Google Analytics settings (true/nil by default)
