Restructuring the Course

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ logo: "assets/images/icon.png"
 
 defaults:
   - scope:
-      path: "docs" # an empty string here means all files in the project
+      path: "" # an empty string here means all files in the project
       type: "pages"
     values:
       layout: "default"
